# private-assistant

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  db.py  main.py  repository.py  schemas.py
app/services/: bookkeeping.py  intent_graph.py  intents.py  vision.py
app/templates/: index.html
docs/architecture/: 2026-03-25-private-assistant-architecture.md
docs/plans/: 2026-03-19-life-agent-mvp-design.md  2026-03-19-life-agent-mvp.md
docs/prd/: 2026-03-25-private-assistant-prd.md
docs/progress/: 2026-03-19-mvp-progress.md  2026-03-24-ios-debugging-notes.md  2026-03-25-speech-first-delivery-plan.md  2026-03-26-ledger-search-and-productivity-delivery.md
docs/technical/: 2026-03-25-speech-first-intent-design.md
ios/: README.md  project.yml
ios/Configs/: PrivateAssistantApp-Info.plist  PrivateAssistantApp.entitlements  PrivateAssistantShareExtension-Info.plist  PrivateAssistantShared-Info.plist
ios/PrivateAssistantApp/: ActivityView.swift  AppLanguage.swift  AppModel.swift  AppNotificationManager.swift  CaptureComposerView.swift  LaunchScreen.storyboard  LedgerView.swift  PrivateAssistantApp.swift  ProductivityIntegrationService.swift  RootView.swift  SettingsView.swift  SpeechCaptureService.swift
ios/PrivateAssistantMobile.xcodeproj/: project.pbxproj
ios/PrivateAssistantShareExtension/: ShareViewController.swift
ios/PrivateAssistantShared/: PrivateAssistantAPIClient.swift  PrivateAssistantConfiguration.swift  (+1 more)
tests/: test_app.py  test_bookkeeping_service.py  test_intent_services.py  test_repository.py  test_scaffold.py
(+3 files in other folders)
