[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "private-assistant"
version = "0.1.0"
description = "Life agent MVP"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "python-multipart>=0.0.9",
  "jinja2>=3.1.4",
  "openai>=1.51.0",
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langgraph>=0.2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.28.0"
]

[tool.setuptools]
packages = ["app", "app.services"]
